--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "ext-json": "*",
         "ext-mbstring": "*",
         "doctrine/inflector": "^1.4|^2.0",
-        "lumphp/collections": "^8.0",
         "lumphp/contracts": "^8.0",
-        "lumphp/macroable": "^8.0",
-        "nesbot/carbon": "^2.17",
+        "illuminate/collections": "^8.0",
+        "illuminate/macroable": "^8.0",
+        "nesbot/carbon": "^2.31",
         "voku/portable-ascii": "^1.4.8"
     },
     "conflict": {
@@ -41,7 +41,7 @@
         }
     },
     "suggest": {
-        "illuminate/filesystem": "Required to use the composer class (^8.0).",
+        "lumphp/laravel-filesystem": "Required to use the composer class (^8.0).",
         "ramsey/uuid": "Required to use Str::uuid() (^4.0).",
         "symfony/process": "Required to use the composer class (^5.1).",
         "symfony/var-dumper": "Required to use the dd function (^5.1).",
