--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lumphp/support",
+    "name": "lumphp/laravel-support",
     "description": "The Illuminate Support package.",
     "license": "MIT",
     "homepage": "https://laravel.com",
@@ -18,7 +18,7 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "doctrine/inflector": "^1.4|^2.0",
-        "lumphp/contracts": "^8.0",
+        "lumphp/laravel-contracts": "^8.0",
         "illuminate/collections": "^8.0",
         "illuminate/macroable": "^8.0",
         "nesbot/carbon": "^2.31",
