--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "ext-mbstring": "*",
         "doctrine/inflector": "^1.4|^2.0",
         "lumphp/laravel-contracts": "^8.0",
-        "illuminate/collections": "^8.0",
+        "lumphp/laravel-collections": "^8.0",
         "illuminate/macroable": "^8.0",
         "nesbot/carbon": "^2.31",
         "voku/portable-ascii": "^1.4.8"
